--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <div style="margin-left: auto; margin-right: auto; width: fit-content; border-radius: 2em;"><img style="width: 40em; border-radius: 2em;" src="tarcza.jpg"/></div>
             <div style="margin-left: auto; margin-right: auto; width: fit-content;">
                 <p style="text-align: center; font-size: 2em;">
-                    To tylko kolor koszuli - ważniejsze są wartości i wiedza którą wynoszą uczniowie ŚL.TZN :)<br />
-                    Szkoda czasu i powietrzana na kłótnie o kolor koszuli ;)
+                    To tylko kolor koszuli - ważniejsze są wartości i wiedza, którą wynoszą uczniowie ŚL.TZN :)<br />
+                    Szkoda czasu i powietrza na kłótnie o kolor koszuli ;)
                 </p>
                 <br />
                 <br />
